Fix overflow issue on the x-axis with framer motion's animations on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
   background: #131212;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
+  overflow-x: hidden;
 }
 
 img {
